namespace Deshawnapicsharp.Models;

public class Walker 
{
    public int Id { get; set; }

    public string Name {get; set;}

    
}